--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,12 +8,13 @@
 
 
     {% block stylesheets %}
-        <link href="{{ asset('css/style.css')}}" rel="stylesheet">
+        <link href="{{ asset('css/custom.css')}}" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     {% endblock %}
 
     {% block javascripts %}
         <script src="{{ asset('js/custom.js') }}"></script>
+        <script src="https://kit.fontawesome.com/81ab4e445e.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     {% endblock %}
 </head>
@@ -26,6 +27,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_article') }}">Tous les Article</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_article_search') }}">Rechercher un Article</a>
+                </li>
                 {% if app.user %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_logout') }}">Se Deconnecter</a>
@@ -36,6 +43,11 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_register') }}">S'inscrire</a>
+                    </li>
+                {% endif %}
+                {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_AUTHOR') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('admin') }}">Admin</a>
                     </li>
                 {% endif %}
             </ul>
