--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,9 @@
                 </li>
                 {% if app.user %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_article_add') }}">Ajouter un article</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_logout') }}">Se Deconnecter</a>
                     </li>
                 {% else %}
